# CSpred

./: CSpred.py  MODELS.md  README.md  UCBshift_in_colab.ipynb  UCBshift_in_colab_notebook.ipynb  compress_models.py  data_prep_functions.py  demo.ipynb  patch_models.py  pyproject.toml  requirements.txt  save_pdb.py  spartap_features.py  toolbox.py  ucbshifty.py
cspred/: __init__.py
