[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cspred"
version = "1.0.0"
description = "UCBShift: chemical shift predictor for protein NMR (H, Hα, C′, Cα, Cβ, N)"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "biopython>=1.81",
    "joblib>=1.3",
]

[project.urls]
Homepage = "https://github.com/HWaymentSteele/CSpred"

[project.scripts]
cspred = "CSpred:cli"

[tool.setuptools]
packages = ["cspred"]
include-package-data = true
py-modules = [
    "CSpred",
    "ucbshifty",
    "spartap_features",
    "data_prep_functions",
    "toolbox",
    "save_pdb",
    "trainer",
]

[tool.setuptools.package-data]
cspred = ["bins/*", "bins/**/*"]
